# math-playground

./: .envrc  pyproject.toml
Python/: basic.ipynb
Sage/: Sage_Playground.ipynb  exceptional_curves.ipynb  smooth_criminal.ipynb
